@@ -1,4 +1,4 @@
-$Id: README 49305 2018-12-02 09:05:31Z kakuto $
+$Id: README 49325 2018-12-05 14:19:43Z hironobu $
 Public domain.  Originally created by Karl Berry, 2005.
 
 Libraries we compile for TeX Live.
@@ -37,11 +37,14 @@ libpaper 1.1.24+nmu2 - checked 24oct13
 libpng 1.6.36 - checked 02dec18
   https://sourceforge.net/projects/libpng/files/ - used by many
 
-lua 5.2.3 - checked 11mar15
+lua 5.2.4 - checked 11mar15
   http://www.lua.org/ftp/
 
-luajit 2.1.0-beta2 - checked 09mar16
-  http://luajit.org/download/LuaJIT-2.1.0-beta1.tar.gz
+lua 5.3.5 - checked 21jul18
+  http://www.lua.org/ftp/
+
+luajit 2.1.0-beta3 - checked 20jun17
+  http://luajit.org/download/LuaJIT-2.1.0-beta3.tar.gz
 
 mpfr 4.0.1 - checked 10feb18
   http://ftp.gnu.org/gnu/mpfr/
@@ -50,11 +53,8 @@ pixman 0.36.0 - checked 22nov18
   http://cairographics.org/releases/
 
 poppler 0.68.0 - checked 20aug18
-  http://poppler.freedesktop.org/ - used by luatex and xetex
+  http://poppler.freedesktop.org/ - used by xetex
   (requires C++11)
-
-potrace 1.15 - checked 07aug17
-  http://potrace.sourceforge.net
 
 teckit 2.5.8 - checked 24jul18
   https://github.com/silnrsi/teckit/archive/2.5.8.tar.gz
