@@ -64,18 +64,21 @@ int main(int argc, char *argv[])
       	    if (*++argv[0] == '\0') {
       	       argc--;  argv++;
       	    }
+      	    if (argv[0] == '\0') goto invalid;
       	    C = *argv[0];
       	    done = 1; break;
       	 case 'o':
       	    if (*++argv[0] == '\0') {
       	       argc--;  ++argv;
       	    }
+      	    if (argv[0] == '\0') goto invalid;
       	    C = atoo(argv[0]);
       	    done = 1; break;
       	 case 'H':
       	    if (*++argv[0] == '\0') {
       	       argc--; argv++;
       	    }
+      	    if (argv[0] == '\0') goto invalid;
       	    h = atoi(argv[0]);
             done=1;
       	    break;
@@ -83,6 +86,7 @@ int main(int argc, char *argv[])
       	    if (*++argv[0] == '\0') {
       	       argc--; argv++;
       	    }
+      	    if (argv[0] == '\0') goto invalid;
       	    w = atoi(argv[0]);
 	    done=1;
       	    break;
@@ -92,6 +96,7 @@ int main(int argc, char *argv[])
       	 case 'h':
       	    hexmap = 1;
       	    break;
+invalid:
       	 default:
       	    printf("%s: %c invalid option\n", myname, c);
       	    exit(1);
