@@ -215,6 +215,7 @@ texmf_other_scripts = \
 	ulqda/ulqda.pl \
 	urlbst/urlbst \
 	vpe/vpe.pl \
+	xindex/xindex.lua \
 	yplan/yplan
 texmf_context_scripts = \
 	context/stubs/unix/context \
